[tool.poetry]
name = "AukroNotifier"
version = "0.1.0"
description = ""
authors = ["@Pygot"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.28.1"
webdriver-manager = "^4.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
